# svg2ssa

./: .gitignore  LICENSE  README.md  boot_svg2ssa_during_freeze.py  cxfreeze.py  freeze_with_cx_Freeze.py  freeze_with_py2exe.py  on-release.md  ply_lex_d.py  ply_lex_transform.py  pyproject.toml  s2s.py  s2s_core.py  s2s_elems.py  s2s_main.py  s2s_svgatts_color.py  s2s_svgatts_misc.py  s2s_svgatts_opacity.py  s2s_svgatts_path.py  s2s_svgatts_trafos.py  s2s_utilities.py
examples/: FREEDOM.7z  mayantemple.blend  mayantemple.blend.obj.svg.ass  plane.7z
examples/rendered-3d/: README.md  eva-new-uvs-blender.fbx  eva-new-uvs-blender.fbx.blend
examples/traced-2d/: README.md  liberty-leading-the-people.jpg.svg.ass
freezing/: boot_svg2ssa.py  freeze_with_cx_Freeze.py  freeze_with_py2exe.py
misc/: cxfreeze.bat
svg2ssa/: __main__.py  core.py  document.py  elements.py  s2s_elems.py  s2s_svgatts_color.py  s2s_svgatts_misc.py  s2s_svgatts_opacity.py  s2s_svgatts_path.py  s2s_svgatts_trafos.py  utilities.py
svg2ssa/attributes/: color.py  d.py  misc.py  opacity.py  path.py  transform.py
