[tool.poetry]
name = "svg2ssa"
version = "0.0.0a0"
description = ""
authors = ["8day"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/8day/svg2ssa"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
ply = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
