[tool.poetry]
name = "svg2ssa"
version = "2022.12.23.0"
description = "Converts subset of SVG 1.1 to SSA v4+"
authors = ["8day"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/8day/svg2ssa"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Environment :: Console",
	"Intended Audience :: End Users/Desktop",
	"Topic :: Multimedia :: Graphics :: Graphics Conversion",
	"Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.7"
ply = "^3.4"
defusedxml = "^0.7"
lxml = { version = "^4.0", optional = true }

[tool.poetry.extras]
fast-parsing = ["lxml"]

[tool.black]
line-length = 120

[tool.pylint."messages control"]
disable = ["line-too-long", "no-else-return", "no-else-raise", "abstract-method"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
